--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,7 @@ name = "SSMProblems"
 uuid = "26aad666-b158-4e64-9d35-0e672562fa48"
 authors = ["FredericWantiez <frederic.wantiez@gmail.com>"]
 version = "0.1.0"
+
+[compat]
+julia = "1.6"
+
