--- a/Project.toml
+++ b/Project.toml
@@ -1,8 +1,12 @@
 name = "SSMProblems"
 uuid = "26aad666-b158-4e64-9d35-0e672562fa48"
 authors = ["FredericWantiez <frederic.wantiez@gmail.com>"]
-version = "0.1.0"
+version = "0.1.1"
+
+[deps]
+AbstractMCMC = "80f14c24-f653-4e6a-9b94-39d6b0f70001"
 
 [compat]
+AbstractMCMC = "5"
 julia = "1.6"
 
