--- a/.github/workflows/DocsPreviewCleanup.yml
+++ b/.github/workflows/DocsPreviewCleanup.yml
@@ -18,9 +18,8 @@ jobs:
               git config user.name "Documenter.jl"
               git config user.email "documenter@juliadocs.github.io"
               git rm -rf "previews/PR$PRNUM"
-              git commit -m "delete preview"
-              git branch gh-pages-new $(echo "delete history" | git commit-tree HEAD^{tree})
-              git push --force origin gh-pages-new:gh-pages
+              git commit -m "delete preview of #$PRNUM"
+              git push
             fi
         env:
             PRNUM: ${{ github.event.number }}
