Add DOCUMENTER_KEY to Docs workflow (#52)

--- a/.github/workflows/Docs.yml
+++ b/.github/workflows/Docs.yml
@@ -30,4 +30,5 @@ jobs:
         env:
           GKSwstype: nul # GR backend issues
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
           JULIA_DEBUG: Documenter # Print `@debug` statements (https://github.com/JuliaDocs/Documenter.jl/issues/955)
