--- a/.github/workflows/DocsPreviewCleanup.yml
+++ b/.github/workflows/DocsPreviewCleanup.yml
@@ -1,4 +1,4 @@
-name: Doc Preview Cleanup
+name: Docs Preview Cleanup
 
 on:
   pull_request:
@@ -18,9 +18,9 @@ jobs:
               git config user.name "Documenter.jl"
               git config user.email "documenter@juliadocs.github.io"
               git rm -rf "previews/PR$PRNUM"
-              git commit -m "delete preview of #$PRNUM"
-              git push
+              git commit -m "delete preview"
+              git branch gh-pages-new $(echo "delete history" | git commit-tree HEAD^{tree})
+              git push --force origin gh-pages-new:gh-pages
             fi
         env:
             PRNUM: ${{ github.event.number }}
-
