--- a/Project.toml
+++ b/Project.toml
@@ -18,7 +18,8 @@ HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
 TestItems = "1c621080-faea-4a02-84b6-bbd5e436b8fe"
 
 [targets]
-test = ["HypothesisTests", "LinearAlgebra", "StableRNGs", "Test", "TestItems"]
+test = ["HypothesisTests", "LinearAlgebra", "StableRNGs", "Test", "TestItemRunner", "TestItems"]
