Correct package name

--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "AnalyticFilters"
+name = "AnalyticalFilters"
 uuid = "3ef92589-7ab8-43f9-b5b9-a3a0c86ecbb7"
 authors = ["THargreaves <th542@cam.ac.uk>"]
 version = "0.1.0"
