--- a/Project.toml
+++ b/Project.toml
@@ -27,6 +27,7 @@ StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
 TestItems = "1c621080-faea-4a02-84b6-bbd5e436b8fe"
+PDMats = "90014a1f-27ba-587c-ab20-58faa44d9150"
 
 [targets]
-test = ["HypothesisTests", "LinearAlgebra", "StableRNGs", "Test", "TestItemRunner", "TestItems"]
+test = ["HypothesisTests", "LinearAlgebra", "StableRNGs", "Test", "TestItemRunner", "TestItems", "PDMats"]
