--- a/examples/MOT_challenge/Project.toml
+++ b/examples/MOT_challenge/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+AbstractMCMC = "80f14c24-f653-4e6a-9b94-39d6b0f70001"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 GaussianDistributions = "43dcc890-d446-5863-8d1a-14597580bb8d"
 GeneralisedFilters = "3ef92589-7ab8-43f9-b5b9-a3a0c86ecbb7"
