--- a/GeneralisedFilters/Project.toml
+++ b/GeneralisedFilters/Project.toml
@@ -31,13 +31,10 @@ HypothesisTests = "0.11"
 NNlib = "0.9"
 LogExpFunctions = "0.3"
 OffsetArrays = "1.14.1"
-SSMProblems = "0.4"
 Statistics = "1.11.1"
 StatsBase = "0.34.3"
 
 [extras]
-HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
-LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 PDMats = "90014a1f-27ba-587c-ab20-58faa44d9150"
 StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
@@ -45,4 +42,4 @@ TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
 TestItems = "1c621080-faea-4a02-84b6-bbd5e436b8fe"
 
 [targets]
-test = ["HypothesisTests", "LinearAlgebra", "StableRNGs", "Test", "TestItemRunner", "TestItems", "PDMats"]
+test = ["PDMats", "StableRNGs", "Test", "TestItemRunner", "TestItems"]
