CompatHelper: add new compat entry for Distributions at version 0.25 for package GeneralisedFilters, (keep existing compat)

--- a/GeneralisedFilters/Project.toml
+++ b/GeneralisedFilters/Project.toml
@@ -22,6 +22,7 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
 DataStructures = "0.18.20"
+Distributions = "0.25"
 GaussianDistributions = "0.5.2"
 OffsetArrays = "1.14.1"
 Statistics = "1.11.1"
