--- a/GeneralisedFilters/Project.toml
+++ b/GeneralisedFilters/Project.toml
@@ -21,16 +21,17 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
+AbstractMCMC = "5"
 AcceleratedKernels = "0.3"
 CUDA = "5"
-AbstractMCMC = "5"
 DataStructures = "0.18.20"
 Distributions = "0.25"
 GaussianDistributions = "0.5.2"
 HypothesisTests = "0.11"
-NNlib = "0.9"
 LogExpFunctions = "0.3"
+NNlib = "0.9"
 OffsetArrays = "1.14.1"
+SSMProblems = "0.4"
 Statistics = "1.11.1"
 StatsBase = "0.34.3"
 
