replaced second order optimizer and added backend testing

--- a/research/maximum_likelihood/Project.toml
+++ b/research/maximum_likelihood/Project.toml
@@ -9,3 +9,4 @@ Mooncake = "da2b9cff-9c12-43a0-ae48-6db2b0edb7d6"
 Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SSMProblems = "26aad666-b158-4e64-9d35-0e672562fa48"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
