Refactor reference trajectory and correct RB case

--- a/GeneralisedFilters/Project.toml
+++ b/GeneralisedFilters/Project.toml
@@ -17,20 +17,22 @@ NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SSMProblems = "26aad666-b158-4e64-9d35-0e672562fa48"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
+AbstractMCMC = "5"
 AcceleratedKernels = "0.3"
 CUDA = "5"
-AbstractMCMC = "5"
 DataStructures = "0.18.20"
 Distributions = "0.25"
 GaussianDistributions = "0.5.2"
 HypothesisTests = "0.11"
-NNlib = "0.9"
 LogExpFunctions = "0.3"
+NNlib = "0.9"
 OffsetArrays = "1.14.1"
+StaticArrays = "1.9.13"
 Statistics = "1.11.1"
 StatsBase = "0.34.3"
 
