Add debug code to doc building

--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -35,12 +35,20 @@ jobs:
           version: '1'
       - uses: julia-actions/cache@v1
       - name: Install dependencies
-        run: julia --project=${{ matrix.pkg.dir }}/docs/ --color=yes -e '
+        run: |
+          julia --project=${{ matrix.pkg.dir }}/docs/ --color=yes -e '
           using Pkg;
           Pkg.Registry.update();
           Pkg.develop(PackageSpec(path="${{ matrix.pkg.dir }}"));
           if "${{ matrix.pkg.name }}" == "GeneralisedFilters"
+              println("Condition matched: will develop SSMProblems");
+              println("Current directory: $(pwd())");
+              println("SSMProblems directory exists: $(isdir(\"./SSMProblems\"))");
               Pkg.develop(PackageSpec(path="./SSMProblems"));
+              println("After developing SSMProblems, status:");
+              Pkg.status();
+          else
+              println("Condition not matched, skipping SSMProblems development");
           end;
           Pkg.instantiate();'
       - name: Build and deploy
