Fix docs/GPU tests CI pipeline for GeneralisedFilters (#77)
* Add debug code to doc building

* Correct debug line

* Add additional paths for doc build action

* Add doc builder files

* Modify SSMProblems dev path

* Modify SSMProblem dev path

* Update docmeta

* Update index.md

* Add buildkite pipeline

* Fix yaml formatting

* Remove tests for LTS versions

These are not compatible with the compat entries we have. I think these were added automatically and aren't needed but this needs double-checking.

--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -25,8 +25,10 @@ jobs:
         pkg:
           - name: GeneralisedFilters
             dir: './GeneralisedFilters'
+            additional_paths: "./SSMProblems"
           - name: SSMProblems
             dir: './SSMProblems'
+            additional_paths: ""
     
     steps:
       - uses: actions/checkout@v4
@@ -35,7 +37,8 @@ jobs:
           version: '1'
       - uses: julia-actions/cache@v1
       - name: Install dependencies
-        run: julia --project=${{ matrix.pkg.dir }}/docs/ --color=yes -e '
+        run: |
+          julia --project=${{ matrix.pkg.dir }}/docs/ --color=yes -e '
           using Pkg;
           Pkg.Registry.update();
           Pkg.develop(PackageSpec(path="${{ matrix.pkg.dir }}"));
@@ -47,6 +50,7 @@ jobs:
         uses: TuringLang/actions/DocsDocumenter@main
         with:
           pkg_path: ${{ matrix.pkg.dir }}
+          additional_pkg_paths: ${{ matrix.pkg.additional_paths }}
           doc-path: ${{ matrix.pkg.dir }}/docs
           doc-make-path: ${{ matrix.pkg.dir }}/docs/make.jl
           doc-build-path: ${{ matrix.pkg.dir }}/docs/build
