--- a/GeneralisedFilters/Project.toml
+++ b/GeneralisedFilters/Project.toml
@@ -22,6 +22,7 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
+Aqua = "0.8"
 AbstractMCMC = "5"
 AcceleratedKernels = "0.3"
 CUDA = "5"
@@ -37,6 +38,7 @@ Statistics = "1.11.1"
 StatsBase = "0.34.3"
 
 [extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 PDMats = "90014a1f-27ba-587c-ab20-58faa44d9150"
 StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
@@ -44,4 +46,4 @@ TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
 TestItems = "1c621080-faea-4a02-84b6-bbd5e436b8fe"
 
 [targets]
-test = ["PDMats", "StableRNGs", "Test", "TestItemRunner", "TestItems"]
+test = ["Aqua", "PDMats", "StableRNGs", "Test", "TestItemRunner", "TestItems"]
