--- a/GeneralisedFilters/Project.toml
+++ b/GeneralisedFilters/Project.toml
@@ -10,7 +10,6 @@ CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 GaussianDistributions = "43dcc890-d446-5863-8d1a-14597580bb8d"
-HypothesisTests = "09f84164-cd44-5f33-b23f-e6b0d136a0d5"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LogExpFunctions = "2ab3a3ac-af41-5b50-aa03-7779005ae688"
 NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
@@ -24,19 +23,21 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 [compat]
 AbstractMCMC = "5"
 AcceleratedKernels = "0.3"
+Aqua = "0.8"
 CUDA = "5"
 DataStructures = "0.18.20"
 Distributions = "0.25"
 GaussianDistributions = "0.5.2"
-HypothesisTests = "0.11"
 LogExpFunctions = "0.3"
 NNlib = "0.9"
 OffsetArrays = "1.14.1"
 StaticArrays = "1.9.13"
 Statistics = "1.11.1"
 StatsBase = "0.34.3"
+Test = "1"
 
 [extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 PDMats = "90014a1f-27ba-587c-ab20-58faa44d9150"
 StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
@@ -44,4 +45,4 @@ TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
 TestItems = "1c621080-faea-4a02-84b6-bbd5e436b8fe"
 
 [targets]
-test = ["PDMats", "StableRNGs", "Test", "TestItemRunner", "TestItems"]
+test = ["Aqua", "PDMats", "StableRNGs", "Test", "TestItemRunner", "TestItems"]
