--- a/GeneralisedFilters/Project.toml
+++ b/GeneralisedFilters/Project.toml
@@ -20,6 +20,9 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
+[compat]
+Distributions = "0.25"
+
 [extras]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 PDMats = "90014a1f-27ba-587c-ab20-58faa44d9150"
