--- a/SSMProblems/Project.toml
+++ b/SSMProblems/Project.toml
@@ -4,19 +4,21 @@ authors = [
     "FredericWantiez <frederic.wantiez@gmail.com>",
     "THargreaves <tim.hargreaves@icloud.com>",
     "Hong Ge",
-    "Charles Knipp" 
+    "Charles Knipp <charlesknipp98@gmail.com>" 
 ]
 version = "0.5.0"
 
 [deps]
 AbstractMCMC = "80f14c24-f653-4e6a-9b94-39d6b0f70001"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [compat]
 AbstractMCMC = "5"
 Aqua = "0.8"
 Distributions = "0.25"
+OffsetArrays = "1.17.0"
 Random = "1"
 Test = "1"
 julia = "1.6"
