--- a/GeneralisedFilters/Project.toml
+++ b/GeneralisedFilters/Project.toml
@@ -21,9 +21,8 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
-julia = "1.10"
 AbstractMCMC = "5"
-AcceleratedKernels = "0.3"
+AcceleratedKernels = "0.3, 0.4"
 Aqua = "0.8"
 CUDA = "5"
 DataStructures = "0.18.20"
@@ -37,6 +36,7 @@ StaticArrays = "1.9.13"
 Statistics = "1.11.1"
 StatsBase = "0.34.3"
 Test = "1"
+julia = "1.10"
 
 [extras]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
