--- a/GeneralisedFilters/examples/trend-inflation/Project.toml
+++ b/GeneralisedFilters/examples/trend-inflation/Project.toml
@@ -7,3 +7,7 @@ GeneralisedFilters = "3ef92589-7ab8-43f9-b5b9-a3a0c86ecbb7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SSMProblems = "26aad666-b158-4e64-9d35-0e672562fa48"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+
+[sources]
+GeneralisedFilters = {path = "../../../GeneralisedFilters/"}
+SSMProblems = {path = "../../../SSMProblems/"}
