--- a/GeneralisedFilters/examples/trend-inflation/Project.toml
+++ b/GeneralisedFilters/examples/trend-inflation/Project.toml
@@ -4,10 +4,7 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FredData = "6e85b7ee-7d24-5488-b1b7-e4f4198c51ac"
 GeneralisedFilters = "3ef92589-7ab8-43f9-b5b9-a3a0c86ecbb7"
+Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SSMProblems = "26aad666-b158-4e64-9d35-0e672562fa48"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
-
-[sources]
-GeneralisedFilters = {path = "../../../GeneralisedFilters/"}
-SSMProblems = {path = "../../../SSMProblems/"}
