CompatHelper: bump compat for DataStructures to 0.19 for package GeneralisedFilters, (keep existing compat)

--- a/GeneralisedFilters/Project.toml
+++ b/GeneralisedFilters/Project.toml
@@ -25,7 +25,7 @@ AbstractMCMC = "5"
 AcceleratedKernels = "0.3, 0.4"
 Aqua = "0.8"
 CUDA = "5"
-DataStructures = "0.18.20"
+DataStructures = "0.18.20, 0.19"
 Distributions = "0.25"
 GaussianDistributions = "0.5.2"
 LogExpFunctions = "0.3"
