--- a/SSMProblems/Project.toml
+++ b/SSMProblems/Project.toml
@@ -1,11 +1,6 @@
 name = "SSMProblems"
 uuid = "26aad666-b158-4e64-9d35-0e672562fa48"
-authors = [
-    "FredericWantiez <frederic.wantiez@gmail.com>",
-    "THargreaves <tim.hargreaves@icloud.com>",
-    "Hong Ge",
-    "Charles Knipp" 
-]
+authors = ["FredericWantiez <frederic.wantiez@gmail.com>", "THargreaves <tim.hargreaves@icloud.com>", "Hong Ge", "Charles Knipp <charlesknipp98@gmail.com>"]
 version = "0.5.0"
 
 [deps]
