--- a/GeneralisedFilters/Project.toml
+++ b/GeneralisedFilters/Project.toml
@@ -13,6 +13,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LogExpFunctions = "2ab3a3ac-af41-5b50-aa03-7779005ae688"
 NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
+PDMats = "90014a1f-27ba-587c-ab20-58faa44d9150"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SSMProblems = "26aad666-b158-4e64-9d35-0e672562fa48"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
@@ -29,8 +30,9 @@ Distributions = "0.25"
 LogExpFunctions = "0.3"
 NNlib = "0.9"
 OffsetArrays = "1.14.1"
+PDMats = "0.11.35"
 SSMProblems = "0.5"
-StaticArrays = "1.9.13"
+StaticArrays = "1.9.14"
 Statistics = "1.11.1"
 StatsBase = "0.34.3"
 Test = "1"
