--- a/SSMProblems/Project.toml
+++ b/SSMProblems/Project.toml
@@ -1,7 +1,12 @@
 name = "SSMProblems"
 uuid = "26aad666-b158-4e64-9d35-0e672562fa48"
-authors = ["FredericWantiez <frederic.wantiez@gmail.com>", "THargreaves <tim.hargreaves@icloud.com>", "Hong Ge", "Charles Knipp <charlesknipp98@gmail.com>"]
 version = "0.6.0"
+authors = [
+    "THargreaves <tim.hargreaves@icloud.com>", 
+    "FredericWantiez <frederic.wantiez@gmail.com>",
+    "Charles Knipp <charlesknipp98@gmail.com>",
+    "Hong Ge <hg344@cam.ac.uk>"
+]
 
 [deps]
 AbstractMCMC = "80f14c24-f653-4e6a-9b94-39d6b0f70001"
