--- a/GeneralisedFilters/Project.toml
+++ b/GeneralisedFilters/Project.toml
@@ -27,6 +27,7 @@ CUDA = "5"
 DataStructures = "0.18.20, 0.19"
 Distributions = "0.25"
 LogExpFunctions = "0.3"
+MCMCDiagnosticTools = "0.3.15"
 OffsetArrays = "1.14.1"
 PDMats = "0.11.35"
 SSMProblems = "0.6"
@@ -40,6 +41,7 @@ julia = "1.10"
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 FiniteDifferences = "26cc04aa-876d-5657-8c51-4c34ba976000"
 JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
+MCMCDiagnosticTools = "be115224-59cd-429b-ad48-344e309966f0"
 PDMats = "90014a1f-27ba-587c-ab20-58faa44d9150"
 StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
@@ -47,4 +49,4 @@ TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
 TestItems = "1c621080-faea-4a02-84b6-bbd5e436b8fe"
 
 [targets]
-test = ["Aqua", "FiniteDifferences", "PDMats", "StableRNGs", "Test", "TestItemRunner", "TestItems", "JET"]
+test = ["Aqua", "FiniteDifferences", "MCMCDiagnosticTools", "PDMats", "StableRNGs", "Test", "TestItemRunner", "TestItems", "JET"]
