--- a/GeneralisedFilters/Project.toml
+++ b/GeneralisedFilters/Project.toml
@@ -15,6 +15,7 @@ OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 PDMats = "90014a1f-27ba-587c-ab20-58faa44d9150"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SSMProblems = "26aad666-b158-4e64-9d35-0e672562fa48"
+StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
@@ -30,6 +31,7 @@ LogExpFunctions = "0.3"
 OffsetArrays = "1.14.1"
 PDMats = "0.11.35"
 SSMProblems = "0.6"
+StableRNGs = "1.0.4"
 StaticArrays = "1.9.16"
 Statistics = "1"
 StatsBase = "0.34.3"
@@ -41,10 +43,9 @@ Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 FiniteDifferences = "26cc04aa-876d-5657-8c51-4c34ba976000"
 JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
 PDMats = "90014a1f-27ba-587c-ab20-58faa44d9150"
-StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
 TestItems = "1c621080-faea-4a02-84b6-bbd5e436b8fe"
 
 [targets]
-test = ["Aqua", "FiniteDifferences", "PDMats", "StableRNGs", "Test", "TestItemRunner", "TestItems", "JET"]
+test = ["Aqua", "FiniteDifferences", "PDMats", "Test", "TestItemRunner", "TestItems", "JET"]
