--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,6 +12,21 @@ concurrency:
   cancel-in-progress: ${{ startsWith(github.ref, 'refs/pull/') }}
 
 jobs:
+  notebook-clean:
+    name: Notebook Output Check
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Verify notebooks are stripped
+        run: |
+          notebooks=$(git ls-files '*.ipynb')
+          if [ -z "$notebooks" ]; then
+            exit 0
+          fi
+          python3 scripts/sync_notebook_badges.py $notebooks
+          python3 scripts/strip_notebook_outputs.py $notebooks
+          git diff --exit-code
+
   test:
     name: ${{ matrix.pkg.name }} - Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }}
     runs-on: ${{ matrix.os }}
