--- a/GeneralisedFilters/docs/Project.toml
+++ b/GeneralisedFilters/docs/Project.toml
@@ -1,3 +1,3 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
-Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
+IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
