--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -36,7 +36,13 @@ jobs:
       - uses: julia-actions/setup-julia@v2
         with:
           version: '1'
-      - uses: julia-actions/cache@v1
+      - uses: julia-actions/cache@v2
+      - name: Cache pip packages
+        if: matrix.pkg.name == 'GeneralisedFilters'
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-jupyter-nbconvert
       - name: Install notebook tooling
         if: matrix.pkg.name == 'GeneralisedFilters'
         run: |
