--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -37,6 +37,12 @@ jobs:
         with:
           version: '1'
       - uses: julia-actions/cache@v2
+      - name: Cache notebook outputs
+        if: matrix.pkg.name == 'GeneralisedFilters'
+        uses: actions/cache@v4
+        with:
+          path: GeneralisedFilters/docs/src/examples
+          key: notebooks-${{ runner.os }}-${{ hashFiles('GeneralisedFilters/examples/**/*.ipynb') }}
       - name: Cache pip packages
         if: matrix.pkg.name == 'GeneralisedFilters'
         uses: actions/cache@v4
